[package]
name = "min-sized-rust-xargo"
version = "0.1.0"
authors = ["johnthagen <johnthagen@gmail.com>"]
edition = "2018"

[dependencies]

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
