[package]
name = "min-sized-rust-xargo"
version = "0.1.0"
authors = ["johnthagen <johnthagen@gmail.com>"]
edition = "2018"

[dependencies]

[profile.dev]
# This isn't required for development builds, but makes development
# build behavior match release builds. To enable unwinding panics
# during development, simply remove this line.
panic = 'abort'     # Abort on panic

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
